[tool.poetry]
name = "webcface"
version = "0.9.6"
description = "WebCFace Python Wrapper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.2.2"
websocket-client = "^1.5.1"
toml = "^0.10.2"
psutil = "^5.9.4"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "toml",
]
build-backend = "setuptools.build_meta"
